Commit final, correccion de bugs.